# open-place-search

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-06-25-current-poi-ingest-manticore.md
sql/: postgres_schema.sql
sql/manticore/: poi_v1.sql
src/open_place_search/: __init__.py  cli.py  documents.py  models.py  parsers.py  storage.py  taxonomy.py
src/open_places_manticore/: __init__.py  cli.py  documents.py  manticore.py  models.py  normalization.py  parsers.py  storage.py  taxonomy.py
tests/: test_cli.py  test_current_flow_contracts.py  test_documents.py  test_local_provider_pipeline.py  test_manticore.py  test_manticore_search_smoke.py  test_open_source_boundary.py  test_parsers.py  test_storage.py
tests/fixtures/: open_data_geojson.json  openstreetmap.jsonl  overture.jsonl  wikidata.jsonl
